# AlertaEmCena

./: .gitattributes  .gitignore  .releaserc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  release.yaml
docker/: docker-compose.yaml  prometheus-config.yaml  tempo-config.yaml
docker/cross-compile/: Dockerfile
res/tests/: event_full_description.txt  event_page.html  event_page_full_description_with_italic_description.txt  event_page_with_italic_description.html
scripts/: backfill_reviews.rs
src/: api.rs  lib.rs  main.rs  metrics.rs  scraper.rs  tracing.rs
src/agenda_cultural/: api.rs  dto.rs  mod.rs  model.rs
src/api/: api.rs  dto.rs  mod.rs  model.rs
src/config/: env_loader.rs  mod.rs  model.rs
src/discord/: api.rs  backup.rs  mod.rs
tests/: agenda_cultural_api_tests.rs  api_tests.rs  discord_api_tests.rs  discord_embed_color_tests.rs  metrics_label_tests.rs  scraper_tests.rs
