[package]
name = "alertaemcena"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
serde_either = "0.2.1"
strum = { version = "0.26.3", features = ["derive"] }
chrono = "0.4.39"
log = "0.4.22"
futures = "0.3.31"
