[package]
name = "alertaemcena"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rust++
voca_rs = "1.15.2"
regex = "1.11.1"
strum = { version = "0.26.3", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
serde_either = "0.2.1"
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = "0.3"
test-log = "0.2.16"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-retry = "0.7.0"
reqwest-middleware = "0.4.0"
scraper = "0.19"

# Discord
serenity = "0.12.4"

# Utils
uuid = { version = "1.11.1", features = ["v4"] }
chrono = "0.4.40"
itertools = "0.14.0"
